# anime-recommender

./: .gitignore  pyproject.toml
app/: app.py
chroma_db/: chroma.sqlite3
